tests/valid/aggregate/skolem_distinct_rank.esm
{
  "esm": "0.6.0",
  "metadata": {
    "name": "skolem_distinct_rank",
    "description": "M3 schema fixture (RFC semiring-faq-unified-ir §5.5 / §5.7 / §8; bead ess-my4.3.2): the value-invention primitives. An index-set-producing `aggregate` carrying `distinct: true` under the `bool_and_or` semiring, a `key` Skolem term ({ \"op\": \"skolem\" }), the nullary `true` op as the body / contribute-always predicate, and a `rank` op that assigns dense integer ids over the resulting data-derived index set. Models mesh-edge enumeration (§7.3 — the operation einsum cannot do): deduplicate the unique undirected edges discovered from a face→edge relation, name each by a canonical Skolem key over its (already canonically sorted) endpoint vertex ids, expose the result as a `kind: \"derived\"` index set via `from_faq`, and `rank` it to dense ids for the array backend. The dedup order and numbering are fixed by the normative determinism rules (§5.7), not by binding discretion. Exercises the additive M3 schema deltas: op enum gains skolem/rank/true; ExpressionNode gains `distinct` + `key`. This is the strict-superset additive form of an ordinary arrayop and validates against the schema with no evaluator.",
    "authors": [
      "EarthSciSerialization/polecats/gastown.capable"
    ],
    "tags": [
      "aggregate",
      "skolem",
      "distinct",
      "rank",
      "value-invention",
      "conformance",
      "schema"
    ]
  },
  "models": {
    "EdgeEnumeration": {
      "index_sets": {
        "faces": {
          "kind": "interval",
          "size": 12
        },
        "local_edges": {
          "kind": "interval",
          "size": 3
        },
        "edges": {
          "kind": "derived",
          "from_faq": "edge_set"
        }
      },
      "variables": {
        "u": {
          "type": "state"
        },
        "edge_lo": {
          "type": "parameter"
        },
        "edge_hi": {
          "type": "parameter"
        },
        "edge_exists": {
          "type": "state"
        },
        "edge_dense_id": {
          "type": "state"
        }
      },
      "equations": [
        {
          "_comment": "edge_set: the index-set-producing node referenced by index_sets.edges.from_faq. distinct:true under bool_and_or dedups the unique undirected edges; `key` mints a canonical Skolem term over the sorted endpoint vertices; the `true` body marks set membership (existence). Output order is the §5.7 sorted order, never insertion order.",
          "lhs": {
            "op": "index",
            "args": [
              "edge_exists",
              "e"
            ]
          },
          "rhs": {
            "op": "aggregate",
            "args": [
              "edge_lo",
              "edge_hi"
            ],
            "semiring": "bool_and_or",
            "distinct": true,
            "output_idx": [
              "e"
            ],
            "ranges": {
              "f": {
                "from": "faces"
              },
              "le": {
                "from": "local_edges"
              }
            },
            "key": {
              "op": "skolem",
              "args": [
                "edge",
                {
                  "op": "index",
                  "args": [
                    "edge_lo",
                    "f",
                    "le"
                  ]
                },
                {
                  "op": "index",
                  "args": [
                    "edge_hi",
                    "f",
                    "le"
                  ]
                }
              ]
            },
            "filter": {
              "op": "true",
              "args": []
            },
            "expr": {
              "op": "true",
              "args": []
            }
          }
        },
        {
          "_comment": "rank: dense integer ids over the derived `edges` set, assigned by position in the sorted distinct sequence (§5.5 / §5.7.3) — what the array backend indexes by.",
          "lhs": {
            "op": "index",
            "args": [
              "edge_dense_id",
              "e"
            ]
          },
          "rhs": {
            "op": "aggregate",
            "args": [],
            "semiring": "sum_product",
            "output_idx": [
              "e"
            ],
            "ranges": {
              "e": {
                "from": "edges"
              }
            },
            "expr": {
              "op": "rank",
              "args": [
                "edges"
              ]
            }
          }
        },
        {
          "_comment": "An ordinary continuous decay, so the model is a well-formed ODE alongside the value-invention (topology) nodes above.",
          "lhs": {
            "op": "D",
            "args": [
              "u"
            ],
            "wrt": "t"
          },
          "rhs": {
            "op": "-",
            "args": [
              "u"
            ]
          }
        }
      ]
    }
  }
}
